--- a/src/attendance/automation/gui/view/TeacherScreen.fxml
+++ b/src/attendance/automation/gui/view/TeacherScreen.fxml
@@ -1,36 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherScreenController">
-    <left>
-        <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+<AnchorPane styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherScreenController">
+   <children>
+        <VBox alignment="TOP_CENTER" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Label text="Classes" />
-                <ListView fx:id="lstClasses" prefHeight="300.0" prefWidth="200.0" />
-                <PieChart fx:id="chrtClasses" prefHeight="160.0" prefWidth="250.0" title="Overall Attendance in class" />
-            </children>
-        </VBox>
-    </left>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-    <right>
-        <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-            <children>
-                <Label text="Students" />
+            <ComboBox fx:id="comboClasses" prefWidth="250.0" promptText="Select a class...">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </ComboBox>
             <TableView fx:id="tblStudents" prefHeight="300.0">
               <columns>
                 <TableColumn fx:id="clmFName" prefWidth="75.0" text="First Name" />
@@ -38,18 +26,7 @@
                 <TableColumn fx:id="clmAtt" prefWidth="75.0" text="Attendance" />
               </columns>
             </TableView>
-                <PieChart fx:id="chrtStudents" prefHeight="160.0" prefWidth="250.0" title="Student's Overall Attendance" />
-                <HBox alignment="CENTER" spacing="20.0" />
-            </children>
-        </VBox>
-    </right>
-    <center>
-        <AnchorPane prefWidth="20.0" BorderPane.alignment="CENTER" />
-    </center>
-    <bottom>
-        <AnchorPane BorderPane.alignment="CENTER">
-            <children>
-                <ButtonBar buttonOrder="L_U_R" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <ButtonBar buttonMinWidth="145.0" buttonOrder="L_U_R">
                     <buttons>
                         <Button id="student-statistics" fx:id="btnStudentStatistics" mnemonicParsing="false" onAction="#handleStudentStatictics" text="Edit Student Statistics" ButtonBar.buttonData="RIGHT">
                             <font>
@@ -61,6 +38,9 @@
                     </buttons>
                 </ButtonBar>
             </children>
-        </AnchorPane>
-    </bottom>
-</BorderPane>
+        </VBox>
+   </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
+</AnchorPane>
