--- a/src/attendance/automation/gui/view/TeacherStudentAttendanceChangeRequest.fxml
+++ b/src/attendance/automation/gui/view/TeacherStudentAttendanceChangeRequest.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXListView?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -10,7 +10,6 @@
 
 <AnchorPane id="AnchorPane" prefHeight="381.0" prefWidth="677.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherStudentAttendanceChangeRequestController">
    <children>
-      <JFXListView fx:id="listMessages" prefHeight="346.0" prefWidth="445.0" />
       <GridPane fx:id="lblDate" layoutX="455.0" layoutY="14.0" prefHeight="181.0" prefWidth="222.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -30,6 +29,7 @@
             <Label fx:id="lblClass" prefHeight="57.0" prefWidth="111.0" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <JFXButton layoutX="170.0" layoutY="353.0" onAction="#loadMessages" text="Load Messages" />
+      <Button layoutX="151.0" layoutY="338.0" mnemonicParsing="false" onAction="#loadMessages" text="Load Messages" />
+      <ListView fx:id="messageView" layoutY="-1.0" prefHeight="334.0" prefWidth="446.0" />
    </children>
 </AnchorPane>
