--- a/src/attendance/automation/gui/view/RequestChange.fxml
+++ b/src/attendance/automation/gui/view/RequestChange.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import java.net.URL?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -54,5 +55,7 @@
             <Font size="19.0" />
          </font>
       </Label>
+      <Button layoutX="487.0" layoutY="357.0" mnemonicParsing="false" text="Request change" />
+      <Button layoutX="401.0" layoutY="357.0" mnemonicParsing="false" text="Cancel" />
    </children>
 </AnchorPane>
