--- a/src/attendance/automation/gui/view/TeacherScreen.fxml
+++ b/src/attendance/automation/gui/view/TeacherScreen.fxml
@@ -39,6 +39,7 @@
               </columns>
             </TableView>
                 <PieChart fx:id="chrtStudents" prefHeight="160.0" prefWidth="250.0" title="Student's Overall Attendance" />
+            <Button mnemonicParsing="false" onAction="#MessageController" prefHeight="30.0" prefWidth="197.0" text="Midlertidig sted knap" />
                 <HBox alignment="CENTER" spacing="20.0" />
             </children>
         </VBox>
