--- a/src/attendance/automation/gui/view/TeacherStudentAttendanceChangeRequest.fxml
+++ b/src/attendance/automation/gui/view/TeacherStudentAttendanceChangeRequest.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="381.0" prefWidth="677.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherStudentAttendanceChangeRequestController">
    <children>
-      <GridPane fx:id="lblDate" layoutX="455.0" layoutY="14.0" prefHeight="181.0" prefWidth="222.0">
+      <GridPane layoutX="455.0" layoutY="14.0" prefHeight="181.0" prefWidth="222.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
