--- a/src/attendance/automation/gui/view/RequestChange.fxml
+++ b/src/attendance/automation/gui/view/RequestChange.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.RequestChangeController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.RequestChangeController">
     <stylesheets>
         <URL value="@/attendance/automation/css/style.css" />
     </stylesheets>
@@ -25,20 +25,20 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="72.79999389648438" minHeight="10.0" prefHeight="59.19999389648437" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="96.60001220703126" minHeight="10.0" prefHeight="64.80000610351563" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="181.59998779296876" minHeight="10.0" prefHeight="181.59998779296876" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="96.60001220703126" minHeight="10.0" prefHeight="87.20001220703124" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="181.59998779296876" minHeight="10.0" prefHeight="158.39998779296872" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Class" textFill="WHITE" GridPane.rowIndex="1" />
             <Label text="Message" textFill="WHITE" GridPane.rowIndex="2" />
             <Label text="Date" textFill="WHITE" />
             <JFXDatePicker fx:id="datePicker" defaultColor="#0e82ff" prefHeight="28.0" prefWidth="174.0" GridPane.columnIndex="1" />
-            <TextField fx:id="txtFieldMessage" nodeOrientation="LEFT_TO_RIGHT" prefHeight="74.0" prefWidth="431.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtFieldMessage" alignment="TOP_LEFT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="90.0" prefWidth="431.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <HBox prefHeight="65.0" prefWidth="86.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <HBox prefHeight="65.0" prefWidth="216.0">
+                  <HBox prefHeight="95.0" prefWidth="216.0">
                      <children>
-                        <ListView fx:id="listViewAllClasses" prefHeight="200.0" prefWidth="200.0" />
+                        <ListView fx:id="listViewAllClasses" prefHeight="105.0" prefWidth="200.0" />
                      </children>
                   </HBox>
                   <HBox prefHeight="65.0" prefWidth="212.0">
@@ -55,7 +55,7 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <Button layoutX="487.0" layoutY="357.0" mnemonicParsing="false" text="Request change" />
-      <Button layoutX="401.0" layoutY="357.0" mnemonicParsing="false" text="Cancel" />
+      <Button layoutX="477.0" layoutY="357.0" mnemonicParsing="false" onAction="#handleSaveRequest" text="Request change" />
+      <Button layoutX="391.0" layoutY="357.0" mnemonicParsing="false" onAction="#handleCancelRequest" text="Cancel" />
    </children>
 </AnchorPane>
