--- a/src/attendance/automation/gui/view/TeacherStudentAttendanceChangeRequest.fxml
+++ b/src/attendance/automation/gui/view/TeacherStudentAttendanceChangeRequest.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="381.0" prefWidth="677.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherStudentAttendanceChangeRequestController">
+<AnchorPane id="AnchorPane" fx:id="anchorPane" prefHeight="381.0" prefWidth="677.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherStudentAttendanceChangeRequestController">
    <children>
       <GridPane layoutX="455.0" layoutY="14.0" prefHeight="181.0" prefWidth="222.0">
         <columnConstraints>
