--- a/src/attendance/automation/gui/view/TeacherStudentAttendanceChangeRequest.fxml
+++ b/src/attendance/automation/gui/view/TeacherStudentAttendanceChangeRequest.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" fx:id="anchorPane" prefHeight="381.0" prefWidth="677.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherStudentAttendanceChangeRequestController">
+<AnchorPane id="AnchorPane" fx:id="anchorPane" prefHeight="381.0" prefWidth="716.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherStudentAttendanceChangeRequestController">
    <children>
-      <GridPane layoutX="455.0" layoutY="14.0" prefHeight="181.0" prefWidth="222.0">
+      <GridPane layoutX="470.0" layoutY="14.0" prefHeight="181.0" prefWidth="278.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="119.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="159.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -21,15 +21,16 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="21.0" prefWidth="113.0" text="Student Name:" />
+            <Label prefHeight="26.0" prefWidth="133.0" text="Student Name:" />
             <Label prefHeight="21.0" prefWidth="105.0" text="Date:" GridPane.rowIndex="1" />
             <Label prefHeight="21.0" prefWidth="109.0" text="Class:" GridPane.rowIndex="2" />
-            <Label fx:id="lblStudentName" prefHeight="105.0" prefWidth="103.0" GridPane.columnIndex="1" />
-            <Label fx:id="lblDate" prefHeight="60.0" prefWidth="128.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="lblClass" prefHeight="57.0" prefWidth="111.0" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="lblStudentName" prefHeight="61.0" prefWidth="165.0" GridPane.columnIndex="1" />
+            <Label fx:id="lblDate" prefHeight="60.0" prefWidth="230.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="lblClass" prefHeight="57.0" prefWidth="255.0" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Button layoutX="151.0" layoutY="338.0" mnemonicParsing="false" onAction="#loadMessages" text="Load Messages" />
-      <ListView fx:id="messageView" layoutY="-1.0" prefHeight="334.0" prefWidth="446.0" />
+      <ListView fx:id="messageView" layoutX="64.0" prefHeight="334.0" prefWidth="384.0" />
+      <JFXButton fx:id="loadMessages" layoutX="196.0" layoutY="345.0" text="Update Messages" textFill="#4bc399" />
+      <JFXButton graphicTextGap="6.0" layoutX="12.0" layoutY="14.0" onAction="#backButton" prefHeight="30.0" prefWidth="36.0" text="&lt;" textFill="#40d0b8" />
    </children>
 </AnchorPane>
