--- a/src/attendance/automation/gui/view/TeacherStudentView.fxml
+++ b/src/attendance/automation/gui/view/TeacherStudentView.fxml
@@ -13,9 +13,13 @@
 
 <AnchorPane styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherStudentViewController">
    <children>
-      <Button id="backbutton" fx:id="btnBackButton" mnemonicParsing="false" onAction="#handleBackButton" text="&lt;-" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
+            <HBox>
+               <children>
+                  <Button id="backbutton" fx:id="btnBackButton" mnemonicParsing="false" onAction="#handleBackButton" text="&lt;-" />
+               </children>
+            </HBox>
             <VBox alignment="CENTER" spacing="10.0">
                <children>
                   <Label text="Student:" />
