fixed datepicker month name css

--- a/src/attendance/automation/css/style.css
+++ b/src/attendance/automation/css/style.css
@@ -158,7 +158,10 @@
 
 .jfx-date-picker .day-cell:hover {
     -fx-background-color: #6698cc;
-    -fx-border-color: transparent;
+}
+
+.jfx-date-picker .label{
+    -fx-text-fill: black;
 }
 
 .context-menu 
