--- a/src/attendance/automation/gui/view/LoginScreen.fxml
+++ b/src/attendance/automation/gui/view/LoginScreen.fxml
@@ -33,7 +33,16 @@
                             </font>
                         </Label>
                         <PasswordField fx:id="txtPassword" onAction="#handleLogin" />
-                  <Label id="messageLbl" fx:id="lblInfoMessage" wrapText="true" />
+                  <VBox>
+                     <children>
+                        <Label id="messageLbl" fx:id="lblInfoMessage" wrapText="true" />
+                            <CheckBox fx:id="checkBoxRememberMe" mnemonicParsing="false" text="Remember login" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                           <VBox.margin>
+                              <Insets left="1.0" top="-15.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                  </VBox>
                     </children>
                 </VBox>
                 <ButtonBar buttonOrder="L_R" prefHeight="40.0" prefWidth="200.0">
@@ -50,8 +59,7 @@
                         </Button>
                     </buttons>
                 </ButtonBar>
-            <Button mnemonicParsing="false" onAction="#handleForgottenPassword" text="Forgot Password?" />
-                <CheckBox fx:id="checkBoxRememberMe" mnemonicParsing="false" text="Remember me" textFill="WHITE" />
+            <Button id="btn-hover" mnemonicParsing="false" onAction="#handleForgottenPassword" text="Forgot Password?" />
             </children>
         </VBox>
     </children>
